<resources>
    <string name="app_name">WeatherApp</string>
    <string name="name">Name</string>
    <string name="lat">Lat</string>
    <string name="lon">Lon</string>
    <string name="temperature">Temperature</string>
    <string name="description">Description</string>
    <string name="max_temperature">Max Temperature</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="weatherapp">WeatherApp</string>
</resources>